[gd_scene load_steps=8 format=2]

[ext_resource path="res://recursos/img/enemigos/bolaConEspinas/Chain-2.png" type="Texture" id=1]
[ext_resource path="res://recursos/img/enemigos/bolaConEspinas/Chain-3.png" type="Texture" id=2]
[ext_resource path="res://recursos/img/enemigos/bolaConEspinas/Mace-Chain.png" type="Texture" id=3]
[ext_resource path="res://recursos/img/enemigos/bolaConEspinas/Square.png" type="Texture" id=4]
[ext_resource path="res://recursos/scripts/enemigos/bolaConEspinas.gd" type="Script" id=5]
[ext_resource path="res://recursos/fx/enemigos/bolaConEspinas/bolaConEspinas pasando.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 54.0093

[node name="bolaConEspinas" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.640625, 0.640625 )
texture = ExtResource( 4 )

[node name="cadenas" type="Node2D" parent="."]

[node name="c2_" type="Sprite" parent="cadenas"]
position = Vector2( 0, 74 )
texture = ExtResource( 2 )

[node name="c1_" type="Sprite" parent="cadenas"]
position = Vector2( 0, 34 )
texture = ExtResource( 1 )

[node name="c2_2" type="Sprite" parent="cadenas"]
position = Vector2( 0, 154 )
texture = ExtResource( 2 )

[node name="c1_2" type="Sprite" parent="cadenas"]
position = Vector2( 0, 114 )
texture = ExtResource( 1 )

[node name="c2_3" type="Sprite" parent="cadenas"]
position = Vector2( 0, 234 )
texture = ExtResource( 2 )

[node name="c1_3" type="Sprite" parent="cadenas"]
position = Vector2( 0, 194 )
texture = ExtResource( 1 )

[node name="bola" type="Sprite" parent="cadenas"]
position = Vector2( 0, 364 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="cadenas/bola"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cadenas/bola/Area2D"]
position = Vector2( -1, 8 )
shape = SubResource( 1 )

[node name="c1_4" type="Sprite" parent="cadenas"]
position = Vector2( 0, 274 )
texture = ExtResource( 1 )

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="fx_cadenas" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 600.0
